--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,4 +43,5 @@ jobs:
         env:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cml comment create '✅ Docker image built and pushed successfully to Artifact Registry with tag: `${{ github.sha }}`' --commit-sha ${{ github.sha }}
+          echo "✅ Docker image built and pushed successfully to Artifact Registry with tag: \`${{ github.sha }}\`" > report.md
+          cml comment create report.md --commit-sha ${{ github.sha }}
